# ecosystem-foundation

./: .env.example  .env.local.example  .gitignore  .vercelignore  README.md  docker-compose.yml  pytest.ini  requirements.txt
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: apps.py  arsenal.py  audit.py  auditoria.py  auth.py  centinela.py  ceo.py  cerebro.py  (+26 more)
apps/api/config/: environment.example
apps/api/tests/: auth_helpers.py  test_ai_company_operating_system.py  test_app_base.py  test_app_registry.py  test_arsenal_blueprint.py  test_arsenal_core.py  test_audit.py  test_auditoria_operational.py  test_auth_control_center.py  test_autonomous_workday_os.py  test_backbone_rupture.py  test_block_10_routes_departments_rupture.py  test_block_b_internal_bus_active_routes.py  test_ceo_daily_center.py  test_cerebro_chief_of_staff_os.py  test_cerebro_memory.py  test_cerebro_operational.py  test_cerebro_real_operation_chat.py  test_cerebro_sombra_inbox.py  test_command_core_production_close_script.py  test_config.py  test_contracts.py  test_control_center.py  test_control_center_endpoint_stability.py  test_control_center_frontend.py  test_department_automated_audit.py  test_department_upgrade_pipeline.py  test_ecommerce_amazon_readiness.py  test_events.py  test_governance.py  test_header_csp_auditor.py  test_integration_bus.py  test_integrations.py  test_memory.py  test_mission_execution_loop.py  test_nube_control_tower.py  test_observability.py  test_permissions.py  test_phase_s_partials_readiness.py  test_phase_s_total_audit.py  (+12 more)
(+741 files in other folders)
